Fixed the navigation to home page and scrolling to top hero section and add overflow x hidden to the body

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 @tailwind utilities;
 
 /* Tailwind CSS setup */
+html,
 body {
   @apply text-text-primary;
   height: 100%;
@@ -18,12 +19,8 @@ body {
   font-style: normal;
   font-size: clamp(1rem, 1.5vw, 1.125rem);
   line-height: 1.6;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
-/* * {
-  outline: 1px solid red;
-} */
-
 h1 {
   font-weight: bold;
   font-family: var(--font-heading);
